--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -150,7 +150,15 @@ config CPU_FREQ_DEFAULT_GOV_PWRUTILX
 	  have a look at the help section of that governor. The fallback
 	  governor will be 'performance'.
 
-endchoice
+config CPU_FREQ_DEFAULT_GOV_DARKUTIL
+	bool "darkutil"
+	select CPU_FREQ_GOV_DARKUTIL
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the 'DARKUTIL' CPUFreq governor by default. If unsure,
+	  have a look at the help section of that governor. The fallback
+	  governor will be 'performance'.
+
 
 config CPU_FREQ_GOV_PERFORMANCE
 	tristate "'performance' governor"
@@ -324,6 +332,43 @@ config CPU_FREQ_GOV_HELIX
  	  both cases. This governor also allows changing of the frequency tipping point by changing the bit shift value of the schedutil get_next_freq equation.
 
   	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SCHEDALUCARD
+	bool "'schedalucard' cpufreq policy governor"
+	depends on CPU_FREQ && SMP
+	select CPU_FREQ_GOV_ATTR_SET
+	select IRQ_WORK
+
+config CPU_FREQ_GOV_DARKUTIL
+	tristate "'darkutil' cpufreq policy governor"
+	depends on CPU_FREQ
+	select CPU_FREQ_GOV_ATTR_SET
+	select IRQ_WORK
+	help
+	  This governor makes decisions based on the utilization data provided
+	  by the scheduler.  It sets the CPU frequency to be proportional to
+	  the utilization/capacity ratio coming from the scheduler.  If the
+	  utilization is frequency-invariant, the new frequency is also
+	  proportional to the maximum available frequency.  If that is not the
+	  case, it is proportional to the current frequency of the CPU.  The
+	  frequency tipping point is at utilization/capacity equal to 80% in
+	  both cases.
+	  To compile this driver as a module, choose M here: the module will
+	  be called cpufreq_darkutil.
+	  If in doubt, say N.
+
+
+config CPU_WAKE_BOOST
+	bool "CPU wake boost"
+	depends on FB
+	help
+	  This governor makes decisions based on the utilization data provided
+	  by the scheduler.  It sets the CPU frequency to be proportional to
+	  the utilization/capacity ratio coming from the scheduler. The
+	  frequency tipping point is at utilization/capacity equal to 80%
+	  by default.
+
+	  If in doubt, say N.
 
 comment "CPU frequency scaling drivers"
 
