drivers: media: camera_v2: make whyred new cam blobs configurable

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -229,6 +229,25 @@ config KERNEL_CUSTOM_E7S
         bool "Custom for hardware E7S_pcb"
 	    help
 	            Custom for E7S_pcb.
+
+choice
+	prompt "Cam Blobs"
+	default MIUI_NEW_CAM
+	help
+	  This option decides which cam version for whyred 
+	  will be included in kernel.
+
+config MIUI_NEW_CAM
+	bool "New cam blobs"
+	help
+	  This is new cam blobs.
+
+config MIUI_OLD_CAM
+	bool "Old cam blobs"
+	help
+	  This is old cam blobs.
+
+endchoice
 				
 if ARM64_DMA_USE_IOMMU
 
