defconfig: Enable JUMP_LABEL
This option enables a transparent branch optimization
that makes certain almost-always-true or almost-always-false
branch conditions even cheaper to execute within the kernel.

Certain performance-sensitive kernel code, such as trace points,
scheduler functionality, networking code and KVM have such
branches and include support for this optimization technique.

If it is detected that the compiler has support for "asm goto",
the kernel will compile such branches with just a nop instruction.
When the condition flag is toggled to true, the nop will be
converted to a jump instruction to execute the conditional
block of instructions.

This technique lowers overhead and stress on the branchprediction
of the processor and generally makes the kernel faster.
The update of the condition is slower, but those are always
very rare.

Signed-off-by: joshuous <joshuous@gmail.com>
Signed-off-by: dopaemon <polarisdp@gmail.com>

--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -14,6 +14,7 @@ CONFIG_NETLABEL=y
 CONFIG_SOUND_CONTROL=y
 # CONFIG_INTEGRITY is not set
 CONFIG_SECURITY_NETWORK=y
+CONFIG_JUMP_LABEL=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
