defconfig: Enanble F2FS
Signed-off-by: dopaemon <polarisdp@gmail.com>

--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -15,6 +15,10 @@ CONFIG_SOUND_CONTROL=y
 # CONFIG_INTEGRITY is not set
 CONFIG_SECURITY_NETWORK=y
 CONFIG_JUMP_LABEL=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_CHECK_FS=y
+CONFIG_F2FS_FS_ENCRYPTION=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
