--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -19,6 +19,8 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
