--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -22,6 +22,10 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 CONFIG_TOUCHSCREEN_COMMON=y
+CONFIG_CPU_FREQ_GOV_DARKUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
+CONFIG_CPU_FREQ_GOV_HELIX=y
+CONFIG_CPU_FREQ_GOV_SCHEDALUCARD=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
