--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -26,6 +26,7 @@ CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 CONFIG_CPU_FREQ_GOV_HELIX=y
 CONFIG_CPU_FREQ_GOV_SCHEDALUCARD=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
