--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -27,6 +27,9 @@ CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 CONFIG_CPU_FREQ_GOV_HELIX=y
 CONFIG_CPU_FREQ_GOV_SCHEDALUCARD=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_DEFAULT_BFQ=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
