--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -30,6 +30,7 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_DEFAULT_BFQ=y
+CONFIG_KLAPSE=y
 ## Doraemon Kernel ##
 
 # CONFIG_USELIB is not set
